--- a/manual/newmanual.html
+++ b/manual/newmanual.html
@@ -70,8 +70,8 @@
                     <p class="flavour-text">Such odd word choice! I hope you can prevail without a "BOOM!".</p>
                     <table>
                         <tr>
-                            <th>Homophones</th>
                             <th>Keywords</th>
+                            <th>Passphrase</th>
                         </tr>
                         <tr>
                             <td>Knew</td>
@@ -110,6 +110,12 @@
                             <td>Jiggy</td>
                         </tr>
                     </table>
+                    <p>This table shows multiple different homophones as well as keywords which match each one individually</p>
+                    <p> </p>
+                    <p>In order to pass this module without acquiring a strike, one must correctly spell the keyword matching with the homophone displayed.</p>
+                    <p></p>
+                    <p>To enter your word correctly, press each button with the necessary letter ONCE! Do not attempt to scroll through letters.</p>
+
                 </div>
                 <div class="page-footer relative-footer">Page 2 of 3
                 </div>
