update manual pages

--- a/manual/newmanual.html
+++ b/manual/newmanual.html
@@ -67,11 +67,11 @@
                 <div class="page-content">
                     <img src="img/keypad.svg" class="diagram">
                     <h2>On the Subject of the Keypad</h2>
-                    <p class="flavour-text">Such odd word choice! I hope you can prevail without a "BOOM!".</p>
-                    <table>
+                    <p class="flavour-text">Such odd word choices! I hope you can prevail without a "BOOM!".</p>
+                    <table style="margin-left: 60px; margin-bottom: 30px;">
                         <tr>
                             <th>Keywords</th>
-                            <th>Passphrase</th>
+                            <th>Password</th>
                         </tr>
                         <tr>
                             <td>Knew</td>
@@ -110,9 +110,9 @@
                             <td>Jiggy</td>
                         </tr>
                     </table>
-                    <p>This table shows multiple different homophones as well as keywords which match each one individually</p>
+                    <p>This table shows multiple different keywords as well as passwords which match each one individually.</p>
                     <p> </p>
-                    <p>In order to pass this module without acquiring a strike, one must correctly spell the keyword matching with the homophone displayed.</p>
+                    <p>The defuser must correctly spell the password matching the keyword displayed.</p>
                     <p></p>
                     <p>To enter your word correctly, press each button with the necessary letter ONCE! Do not attempt to scroll through letters.</p>
 
@@ -126,40 +126,35 @@
             <div class="page page-bg-03">
                 <div class="page-header">
                     <span class="page-header-doc-title">Keep Talking and Nobody Explodes</span>
-                    <span class="page-header-section-title">The Big Button</span>
+                    <span class="page-header-section-title">The Button</span>
                 </div>
                 <div class="page-content">
                     <img src="img/bigbutton.svg" class="diagram">
-                    <h2>On the Subject of the Big Button</h2>
+                    <h2>On the Subject of the Button</h2>
                     <p class="flavour-text">Such a large and bright button! So tempting to press over and over...</p>
-                    <p>Follow these given instructions in order to avoid certain detonation.</p>
+                    <p class="flavour-text">Follow these given instructions in order to avoid certain detonation.</p>
                     <p> </p>
-                    <p> The "big button" has a light which shows colors such as:
-                        <ul>
-                            <li>RED</li>
-                            <li>BLUE</li>
-                            <li>GREEN</li>
-                        </ul>
-                        <p>
-                            If the color shown is red:
-                            <ul>
-                                <li>You must press the button when the timer reaches an EVEN number. </li>
-                            </ul>
-                        </p>
+                    <p>First and foremost, push and hold the button!</p>
+                    <p> The button has a light which shows one of the following colors while the button is being held:
 
-                        <p>
-                            If the color shown is blue:
-                            <ul>
-                                <li>You must press the button when the timer reaches an ODD number. </li>
-                            </ul>
-                        </p>
-
-                        <p>
-                            If the color shown is green:
-                            <ul>
-                                <li>You must press the button when the timer reaches a multiple of THREE. </li>
-                            </ul>
-                        </p>
+                        <table id="button_table">
+                            <tr>
+                                <th>Button Color</th>
+                                <th>You must release the button when the timer has a...</th>
+                            </tr>
+                            <tr>
+                                <td style="color: red;">Red</td>
+                                <td>1 or 4 in any position</td>
+                            </tr>
+                            <tr>
+                                <td style="color: green;">Green</td>
+                                <td>2 or 5 in any position</td>
+                            </tr>
+                            <tr>
+                                <td style="color: blue;">Blue</td>
+                                <td>3 or 6 in any position</td>
+                            </tr>
+                        </table>
 
                 </div>
                 <div class="page-footer relative-footer">Page 3 of 3</div>
