update manual images

--- a/manual/newmanual.html
+++ b/manual/newmanual.html
@@ -38,13 +38,19 @@
                         <p> </p>
                         <p> </p>
                         <p>
-                            If the serial number ends with an odd digit:
+                            If the serial number contains a vowel:
+                            <ul>
+                                <li>You must cut wire 1. </li>
+                            </ul>
+                        </p>
+                        <p>
+                            Ottherwise, if the serial number ends with an odd digit:
                             <ul>
                                 <li>You must cut both wires 1 and 3. </li>
                             </ul>
                         </p>
                         <p>
-                            If the serial number ends with an even digit:
+                            Otherwise, if the serial number ends with an even digit:
                             <ul>
                                 <li> You must cut both wires 1 and 2. </li>
                             </ul>
@@ -71,7 +77,7 @@
                     <table style="margin-left: 60px; margin-bottom: 30px;">
                         <tr>
                             <th>Keywords</th>
-                            <th>Password</th>
+                            <th>Passwords</th>
                         </tr>
                         <tr>
                             <td>Knew</td>
