add keywords, button color, and update manual

--- a/manual/newmanual.html
+++ b/manual/newmanual.html
@@ -25,18 +25,15 @@
                     <h2>On the Subject of Cutting the Wires</h2>
                     <p class="flavour-text">One wrong snip leads you one step closer to explosion!</p>
 
-                    <ul>
-                        <li>You are given the choice to cut as many of the 3 wires needed</li>
-                        <li>
-                            The wires needed to be cut are based upon the serial number either:
-                            <ul>
-                                <li>Ending with an odd digit</li>
-                                <li>Ending with an even digit</li>
-                            </ul>
-                        </li>
-                        <p> </p>
-                        <p> </p>
-                        <p> </p>
+                    <p>You are given the choice to cut as many of the 3 wires needed</p>
+                    <div>
+                        The wires needed to be cut are based upon the serial number either:
+                        <ul>
+                            <li>Ending with an odd digit</li>
+                            <li>Ending with an even digit</li>
+                        </ul>
+                    </div>
+                    <div style="margin-top: 70px;">
                         <p>
                             If the serial number contains a vowel:
                             <ul>
@@ -44,7 +41,7 @@
                             </ul>
                         </p>
                         <p>
-                            Ottherwise, if the serial number ends with an odd digit:
+                            Otherwise, if the serial number ends with an odd digit:
                             <ul>
                                 <li>You must cut both wires 1 and 3. </li>
                             </ul>
@@ -55,7 +52,7 @@
                                 <li> You must cut both wires 1 and 2. </li>
                             </ul>
                         </p>
-                    </ul>
+                    </div>
 
                 </div>
                 <div class="page-footer relative-footer">Page 1 of 3</div>
@@ -74,6 +71,12 @@
                     <img src="img/keypad.svg" class="diagram">
                     <h2>On the Subject of the Keypad</h2>
                     <p class="flavour-text">Such odd word choices! I hope you can prevail without a "BOOM!".</p>
+                    <p>This table shows multiple different keywords as well as passwords which match each one individually.</p>
+                    <p> </p>
+                    <p>The defuser must correctly spell the password matching the keyword displayed.</p>
+                    <p></p>
+                    <p>To enter your word correctly, press each button with the necessary letter ONCE! Do not attempt to scroll through letters.</p>
+
                     <table style="margin-left: 60px; margin-bottom: 30px;">
                         <tr>
                             <th>Keywords</th>
@@ -115,19 +118,44 @@
                             <td>Two</td>
                             <td>Jiggy</td>
                         </tr>
+                        <tr>
+                            <td>You're</td>
+                            <td>Musak</td>
+                        </tr>
+                        <tr>
+                            <td>Yore</td>
+                            <td>Brows</td>
+                        </tr>
+                        <tr>
+                            <td>Ur</td>
+                            <td>Prise</td>
+                        </tr>
+                        <tr>
+                            <td>Your</td>
+                            <td>Pries</td>
+                        </tr>
+                        <tr>
+                            <td>You</td>
+                            <td>Terse</td>
+                        </tr>
+                        <tr>
+                            <td>U</td>
+                            <td>Terce</td>
+                        </tr>
+                        <tr>
+                            <td>Ewe</td>
+                            <td>Sloes</td>
+                        </tr>
+                        <tr>
+                            <td>Ew</td>
+                            <td>Slows</td>
+                        </tr>
                     </table>
-                    <p>This table shows multiple different keywords as well as passwords which match each one individually.</p>
-                    <p> </p>
-                    <p>The defuser must correctly spell the password matching the keyword displayed.</p>
-                    <p></p>
-                    <p>To enter your word correctly, press each button with the necessary letter ONCE! Do not attempt to scroll through letters.</p>
 
                 </div>
                 <div class="page-footer relative-footer">Page 2 of 3
                 </div>
             </div>
-
-
 
             <div class="page page-bg-03">
                 <div class="page-header">
@@ -159,6 +187,10 @@
                             <tr>
                                 <td style="color: blue;">Blue</td>
                                 <td>3 or 6 in any position</td>
+                            </tr>
+                            <tr>
+                                <td style="color: purple;">Purple</td>
+                                <td>0 or 9 in any position</td>
                             </tr>
                         </table>
 
