git add update wires instructions

--- a/manual/newmanual.html
+++ b/manual/newmanual.html
@@ -37,19 +37,19 @@
                         <p>
                             If the serial number contains a vowel:
                             <ul>
-                                <li>You must cut wire 1. </li>
+                                <li>You must cut wire A. </li>
                             </ul>
                         </p>
                         <p>
                             Otherwise, if the serial number ends with an odd digit:
                             <ul>
-                                <li>You must cut both wires 1 and 3. </li>
+                                <li>You must cut both wires A and C. </li>
                             </ul>
                         </p>
                         <p>
                             Otherwise, if the serial number ends with an even digit:
                             <ul>
-                                <li> You must cut both wires 1 and 2. </li>
+                                <li> You must cut both wires A and B. </li>
                             </ul>
                         </p>
                     </div>
